quick conclusions fix

--- a/code/regression_analysis.ipynb
+++ b/code/regression_analysis.ipynb
@@ -947,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSE Out vs In Sample are close. Looking at the plot of Returns (In-Sample) and predicted returns (Out-of-Sample) there seem to be a relationship. "
+    "RMSE Out vs In Sample are close. Looking at the plot of In-Sample and Out-of-Sample data there seem to be a relationship. "
    ]
   },
   {
